--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,10 +11,23 @@
 }
 
 .nav-pills {
+   
+    /* background-color:  #19A7CE; */
     --bs-nav-pills-border-radius: 0.375rem;
     --bs-nav-pills-link-active-color: #fff;
+
     --bs-nav-pills-link-active-bg:  #19A7CE;
 }
+.nav-link {
+    height: 45px;
+    /* background-color:  #19A7CE; */
+    --bs-nav-pills-border-radius: 0.375rem;
+    --bs-nav-pills-link-active-color: #fff;
+
+    --bs-nav-pills-link-active-bg:  #19A7CE;
+}
+
+
 
 .loginButton{
     background-color: #02c0d5;
@@ -27,3 +40,20 @@
         color: #fff;
 }
     
+.imageLogin{
+    padding-left: 10px;
+   
+}
+.imageLogo{
+    position: relative;
+    display: inline-block;
+    max-width: 100px;
+   
+}
+.topic{
+    display: inline-block;
+   position: absolute;
+   margin-left: 100px;
+   color:#19A7CE;
+}
+
