--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,10 +71,29 @@
 }
 
 .productContainer{
-    display: grid;
+display: grid;
+position: relative;
   column-gap: 50px;
   row-gap: 50px;
   grid-template-columns: auto auto auto;
 
   padding: 20px;
+}
+
+.firstPageProducts{
+ position: absolute;
+ background-color: rgb(255, 255, 255);
+}
+
+.secondPageProducts{
+ position: absolute;
+ padding: 20px;
+ background-color: rgb(245, 245, 245);
+ z-index: 100;
+ border-radius: 10px;
+ /* width: 900px; */
+}
+
+textarea {
+    height: 180px;
 }
