--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,99 +1,295 @@
 /* *{background-color: #fff;} */
-.boxShadow{
+.boxShadow {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-   
+
     /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;} */
 }
 
-.colorBlue{
+.colorBlue {
     background-color: #19A7CE;
 
 }
 
+
+.navbar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    margin: 0;
+    width: 250px;
+    height: 100%;
+    background: rgb(20, 69, 107);
+    background: linear-gradient(7deg, rgb(64, 149, 172) 0%, rgba(25, 167, 206, 1) 42%);
+    z-index: 1000;
+    display: flex;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* border-radius: 10px; */
+}
+
+
+.navbarNav {
+    width: 100%;
+    margin-top: 100px;
+    /* margin-top: 100px; */
+    height: 100vh;
+    overflow-y: hidden;
+}
+
+.navbarListItems {
+
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+
+}
+
+.navbarListItem,
+.navbarListItemActive {
+    /* margin-top: 0.25rem; */
+    padding: 15px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+
+}
+
+.navbarListItemActive {
+    background: rgb(0, 110, 140);
+    background: linear-gradient(90deg, rgb(255, 255, 255) 0.5%, rgb(23, 158, 195) 4%);
+
+}
+
+.navbarListItemName {
+    font-size: 20px;
+    font-weight: 600;
+    color: #ffffff;
+    display: flex;
+
+
+}
+
+
 .nav-pills {
-   
+
     /* background-color:  #19A7CE; */
     --bs-nav-pills-border-radius: 0.375rem;
     --bs-nav-pills-link-active-color: #fff;
 
-    --bs-nav-pills-link-active-bg:  #19A7CE;
+    --bs-nav-pills-link-active-bg: #19A7CE;
 }
+
 .nav-link {
     height: 45px;
     /* background-color:  #19A7CE; */
     --bs-nav-pills-border-radius: 0.375rem;
     --bs-nav-pills-link-active-color: #fff;
 
-    --bs-nav-pills-link-active-bg:  #19A7CE;
+    --bs-nav-pills-link-active-bg: #19A7CE;
 }
 
 
 
-.loginButton{
+.loginButton {
     background-color: #02c0d5;
     color: #fff;
 }
 
-.loginButton:hover
-{
-        background-color: #00e5ff;
-        color: #fff;
+.loginButton:hover {
+    background-color: #00e5ff;
+    color: #fff;
 }
-    
-.imageLogin{
+
+.imageLogin {
     padding-left: 10px;
-   
+
 }
-.imageLogo{
+
+.imageLogo {
     position: relative;
     display: inline-block;
     max-width: 100px;
-   
+
 }
-.topic{
+
+.topic {
     display: inline-block;
-   position: absolute;
-   margin-left: 100px;
-   color:#19A7CE;
+    position: absolute;
+    margin-left: 100px;
+    color: #19A7CE;
 }
 
-.mainContainer{
-    margin-left: 350px;
+.mainContainer {
+    margin-left: 300px;
     margin-top: 30px;
-    
+    max-width: 80%;
+
+
 }
 
-.card{
-    width: 350px;
+.card {
+    /* margin: auto ; */
+    max-width: 350px;
     max-height: 350px;
     display: flex;
     box-shadow: rgba(118, 126, 134, 0.2) 0px 8px 24px;
 }
 
-.productContainer{
-display: grid;
-position: relative;
-  column-gap: 50px;
-  row-gap: 50px;
-  grid-template-columns: auto auto auto;
+.productContainer {
+    display: grid;
+    /* position: relative; */
+    column-gap: 50px;
+    row-gap: 50px;
+    grid-template-columns: auto auto auto;
 
-  padding: 20px;
+    padding: 20px;
 }
 
-.firstPageProducts{
- position: absolute;
- background-color: rgb(255, 255, 255);
+.firstPageProducts {
+    /* position: absolute; */
+    background-color: rgb(255, 255, 255);
 }
 
-.secondPageProducts{
- position: absolute;
- padding: 20px;
- background-color: rgb(245, 245, 245);
- z-index: 100;
- border-radius: 10px;
- /* width: 900px; */
+.secondPageProducts {
+    /* position: absolute; */
+    padding: 20px;
+    background-color: rgb(255, 255, 255);
+    /* z-index: 100; */
+    border-radius: 10px;
+    /* width: 900px; */
 }
 
 textarea {
     height: 180px;
+}
+
+.cardName{
+    text-decoration: none;
+}
+
+
+@media (max-width: 1000px) {
+
+    .navbar {
+        left: 0;
+        width: 200px;
+      }
+
+    .mainContainer {
+        /* margin: 300px; */
+        margin-top: 30px;
+        max-width: 60%;
+        margin-left: 30%;
+
+
+    }
+
+    .productContainer {
+        display: grid;
+        position: relative;
+        column-gap: 50px;
+        row-gap: 50px;
+        grid-template-columns: auto auto;
+
+        padding: 20px;
+    }
+}
+
+
+@media (max-width: 600px) {
+    .mainContainer {
+        margin-left: 0px;
+        margin: auto;
+        margin-top: 10px;
+        text-align: center;
+        margin-bottom: 50px;
+        max-width: 80%;
+     
+
+    }
+ 
+    .productContainer {
+
+        display: flex;
+        /* position: relative; */
+        /* column-gap: 50px;
+        row-gap: 50px; */
+        /* grid-template-columns: auto; */
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+
+        padding: 20px;
+    }
+
+
+
+.navbar {
+    position: fixed;
+    left: 0;
+    top:auto;
+    bottom: 0;
+    margin: 0;
+    height: 52px;
+    width: 100%;
+  
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* border-radius: 10px; */
+}
+
+
+.navbarNav {
+    width: 100%;
+    margin-top: 0;
+    /* margin-top: 100px; */
+    height: 65px;
+    
+}
+
+.navbarListItems {
+
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: left;
+
+}
+.navbarListItem,
+.navbarListItemActive {
+    /* margin-top: 0.25rem; */
+    padding: 10px;
+    padding-top: 7px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+
+}
+
+.navbarListItemActive {
+    background: rgb(0,110,140);
+background: linear-gradient(0deg, rgb(253, 253, 253) 4%, rgba(25,167,206,1) 20%);
+   
+
+}
+
+.navbarListItemName {
+    font-size: 15px;
+    font-weight: 600;
+    color: #ffffff;
+    display: flex;
+
+
+}
+
+
+
+
 }
