--- a/client/src/App.css
+++ b/client/src/App.css
@@ -185,6 +185,14 @@ textarea {
     margin-left: 80%;
 }
 
+.clickable{
+    cursor: pointer;
+}
+
+
+
+
+/* ------------------------------------------ */
 
 @media (max-width: 1000px) {
 
