--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,12 @@
 
 }
 
+.loader{
+    color: #19A7CE;
+    margin-top: 230px;
+    margin-left: 30%;
+}
+
 
 .navbar {
     position: fixed;
@@ -135,11 +141,14 @@
 .card {
     /* margin: auto ; */
     max-width: 350px;
-    max-height: 350px;
+    max-height: 340px;
     display: flex;
     box-shadow: rgba(118, 126, 134, 0.2) 0px 8px 24px;
 }
-
+.fixCard{
+    width:100%;
+    height: 80%;
+}
 .productContainer {
     display: grid;
     /* position: relative; */
@@ -269,15 +278,19 @@ textarea {
 
     .productContainer {
 
-        display: flex;
+        display: grid;
         /* position: relative; */
         /* column-gap: 50px;
         row-gap: 50px; */
-        /* grid-template-columns: auto; */
+        grid-template-columns: auto;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         padding: 20px;
+    }
+    .fixCard{
+        width:100%;
+        height: 250px;
     }
 
     .QRContainer {
