--- a/client/src/App.css
+++ b/client/src/App.css
@@ -145,6 +145,11 @@
     display: flex;
     box-shadow: rgba(118, 126, 134, 0.2) 0px 8px 24px;
 }
+/* .card-img-top{
+    
+    height: 200px;
+
+} */
 .fixCard{
     width:100%;
     height: 80%;
@@ -202,6 +207,7 @@ textarea {
 .topBarIcon {
     margin-left: 80%;
 }
+
 
 .clickable{
     cursor: pointer;
