--- a/client/src/App.css
+++ b/client/src/App.css
@@ -138,18 +138,29 @@
 
 }
 
-.card {
-    /* margin: auto ; */
-    max-width: 350px;
+.productcard {
+   
+   width: 350px;
     max-height: 340px;
     display: flex;
     box-shadow: rgba(118, 126, 134, 0.2) 0px 8px 24px;
+    /* justify-content: center; */
+    /* align-items: center; */
 }
-/* .card-img-top{
-    
-    height: 200px;
+.qrcard{
+    /* max-width: 350px;
+    max-height: 340px; */
+    display: flex;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 24px;
+}
+.card{
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 24px;
+}
+.card-img-top{
+    /* width: 300px;
+    height: auto; */
 
-} */
+}
 .fixCard{
     width:100%;
     height: 80%;
@@ -160,7 +171,7 @@
     column-gap: 50px;
     row-gap: 50px;
     grid-template-columns: auto auto auto;
-
+    justify-content: space-between;
     padding: 20px;
 }
 
@@ -262,6 +273,12 @@ textarea {
 
 
     }
+    .productcard {
+   
+        width: 230px;
+         height:220px;
+      
+     }
 
     .QRContainer {
 
@@ -276,9 +293,10 @@ textarea {
         column-gap: 50px;
         row-gap: 50px;
         grid-template-columns: auto auto;
-
         padding: 20px;
     }
+
+ 
 }
 
 
@@ -316,6 +334,12 @@ textarea {
         grid-template-columns: auto auto;
         padding: 5px;
     }
+    .productcard {
+   
+        width: auto;
+        height:auto;
+      
+     }
 
 
 
